<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stop"
        android:icon="@drawable/ic_action_stop"
        android:title="@string/action_stop"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_playAll"
        android:icon="@drawable/ic_launcher"
        android:title="@string/play_all_samples"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reRecordAll"
        android:icon="@drawable/ic_launcher"
        android:title="@string/start_re_recording_on_all_samples"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switchToMicrophoneMode"
        android:icon="@drawable/ic_launcher"
        android:title="@string/switch_to_microphone_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switchToAudioCaptureMode"
        android:icon="@drawable/ic_launcher"
        android:title="@string/switch_to_audio_capture_mode"
        app:showAsAction="never" />
</menu>
